# zoom_refactor

./: package.json  pnpm-lock.yaml
.github/workflows/: deploy-client.yml  deploy.yml
client/: index.html  package.json  pnpm-lock.yaml
client/src/: main.js
client/src/application/: createRoom.js  fileTransfer.js  joinRoom.js  leaveRoom.js  sendMessage.js
client/src/domain/: message.js  participant.js  room.js
client/src/infrastructure/: auth.js  icons.js  router.js  storage.js  webrtc.js  websocket.js
client/src/presentation/: state.js
client/src/presentation/components/: chat.js  controls.js  drawer.js  preview.js  shareModal.js  stats.js  videoLayout.js
client/styles/: main.css
client/styles/base/: reset.css  typography.css  variables.css
client/styles/components/: buttons.css  chat.css  controls.css  drawer.css  modal.css  preview.css  tabs.css  video.css
client/styles/layout/: app.css  header.css
server/: Cargo.toml  fly.toml  nginx.conf
server/src/: config.rs  error.rs  lib.rs  main.rs
server/src/domain/: error.rs  message.rs  mod.rs  participant.rs  room.rs
server/src/handlers/: error.rs  mod.rs  room.rs  webrtc.rs
server/src/infrastructure/: auth.rs  connection_registry.rs  error.rs  memory_room_store.rs  mod.rs  room_repository.rs
server/src/orchestrator/: error.rs  mod.rs
server/src/transport/: error.rs  middleware.rs  mod.rs  websocket.rs
