[package]
name = "signaling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
dotenvy = "0.15"
dashmap = "5.5"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
envy = "0.4"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"

